# funpayhub

./: .gitignore  README.md  app.py  bootstrap.py  build_locales.py  exit_codes.py  extract_all_locales.sh  extract_en_locales.sh  extract_ru_locales.sh  keyboard_builder2.py  keyboard_builder3.py  launcher.py  logger_conf.py  logger_formatter.py  loggers.py  main.py  pyproject.toml  requirements.txt  run_funpayhub.sh  temp.py  temp2.py  temp_main.py  tt.py  updater.py  utils.py  товары.txt
.github/scripts/: send_telegram_notification.py
.github/workflows/: send_telegram_notification.yml
config/: auto_response.toml  funpayhub.toml
funpayhub/: logger_conf.py  logger_formatter.py  loggers.py  setup_config.py  translater.py  updater.py  utils.py
funpayhub/app/: __init__.py  args_parser.py  first_response_cache.py  formatters.py  hub.py  main.py  notification_channels.py  tty.py  workflow_data.py
funpayhub/app/dispatching/: __init__.py  dispatcher.py  handler_manager.py  router.py
funpayhub/app/funpay/: main.py  offers_raiser.py
funpayhub/app/plugin/: __init__.py  manager.py  plugin.py
funpayhub/app/plugins/: __init__.py  manager.py  plugin.py
funpayhub/app/properties/: __init__.py  auto_delivery_properties.py  auto_response.py  blacklist.py  first_response.py  flags.py  general_properties.py  global_toggles.py  notifications.py  on_sale_confirmation.py  plugin_properties.py  properties.py  review_reply.py  telegram_notifications.py  telegram_properties.py  validators.py
funpayhub/app/routers/: __init__.py  on_language_change.py  on_parameter_change.py  other.py
funpayhub/app/setup/: __init__.py  callbacks.py  states.py  tg.py  ui.py
funpayhub/app/telegram/: callbacks.py  main.py  states.py
funpayhub/app/utils/: banners.py  formatters_query_parser.py  get_profile_categories.py  order_offer_name_comparison.py
funpayhub/lib/: __init__.py  exceptions.py  goods_sources.py  products_file.py  translater.py  workflow_data.py
funpayhub/lib/base_app/: __init__.py  app.py  properties_flags.py  telegram.py  workflow_data.py
funpayhub/lib/core/: __init__.py  classproperty.py  safe_tuple.py  translatable_exception.py
funpayhub/lib/exceptions/: __init__.py  base.py  formatters.py  goods.py  plugins.py  properties.py
funpayhub/lib/hub/: parser.py
funpayhub/lib/plugin/: __init__.py  installers.py  (+2 more)
funpayhub/plugin/: types.py
funpayhub/properties/: __init__.py  base.py  properties.py
plugins/chat_sync/: manifest.json
plugins/exec_plugin/: manifest.json
storage/: README.MD
storage/banners/: readme.md
storage/fonts/: readme.md
tests/: version_integrity_test.py
(+261 files in other folders)
