[project]
name = "funpayhub"
version = "0.3.2"
description = "FunPay bot."
requires-python = ">=3.13"

dependencies = [
    "aiogram~=3.24.0",
    "colorama~=0.4.6",
    "eventry>=0.3.6,<0.4.0",
    "funpaybotengine>=0.4.4,<0.5.0",
    "packaging~=25.0",
    "pydantic>=2.12.5,<2.13",
    "tomli-w~=1.2.0",
]

authors = [
    {name = "Qvvonk", email="qvvonk@gmail.com"}
]

maintainers = [
    {name = "Qvvonk", email="qvvonk@gmail.com"}
]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
]


[project.urls]
"Telegram Channel" = "https://t.me/funpay_hub"
Repository = "https://github.com/funpayhub/funpayhub"
Issues = "https://github.com/funpyahub/funpayhub/issues"


[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-asyncio>=1.1.0",
]
dev = [
    "mypy>=1.17.0",
    "ruff",
]
docs = [
    "pydata-sphinx-theme>=0.16.1",
    "sphinx>=8.1.3",
    "sphinx-design>=0.6.1",
]


[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ['funpayhub']


[tool.mypy]
plugins = "pydantic.mypy"
python_version = '3.13'
warn_redundant_casts = true
warn_unused_ignores = true
strict = true
pretty = true
exclude = [
    "docs",
    ".venv",
]


[pydantic-mypy]
init_forbid_extra = false
init_typed = false
warn_required_dynamic_aliases = true


[tool.ruff]
line-length = 99
exclude = [
    ".git",
    "build",
    "dist",
    "venv",
    ".venv",
    "docs",
    "*.egg-info"
]


[tool.ruff.format]
quote-style = "single"
line-ending = "lf"
indent-style = "space"


[tool.ruff.lint]
select = [
    "I",
    "N",
    "C4",
    "E",
    "F",
    "T20",
    "RET",
    "COM"
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403"]
"app.py" = ["E402"]
"launcher.py" = ["E402"]


[tool.ruff.lint.isort.sections]
fphlib = ["funpayhub.lib.*"]
fphapp = ["funpayhub.app.*"]

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "fphlib", "fphapp", "local-folder"]
required-imports = ["from __future__ import annotations"]
force-to-top = ["typing", "dataclasses"]
length-sort = true
lines-between-types = 0
lines-after-imports = 2
split-on-trailing-comma = true
combine-as-imports = true
force-wrap-aliases = true
